--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <html>
 <head>
+	<style type="text/css">
+	body{
+		background: -webkit-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+		background:    -moz-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+		background:     -ms-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+		background:      -o-linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+		background:         linear-gradient(90deg, #16222A 10%, #3A6073 90%);
+	}
+	</style>
 </head>
 <body>
-<h1>Hello, World</h1>
+	<h1>Hello, World</h1>
 </body>
 </html>
