--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
 	<h1>Hello, World</h1>
+	<style style="display: block; white-space: pre; font: 13px/1.8 Monaco,Mono-Space; background: none repeat scroll 0% 0% rgb(51, 51, 51); color: lightgrey;" contenteditable="">
+	body{
+		color: black;
+	}
+	</style>
 </body>
 </html>
