--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <head>
 	<style type="text/css">
 	body{
-
+		background: -webkit-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Chrome 10+, Saf5.1+ */
+		background:    -moz-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* FF3.6+ */
+		background:     -ms-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* IE10 */
+		background:      -o-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Opera 11.10+ */
+		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */
 	}
 	</style>
 </head>
 <body>
 	<h1>Hello, World</h1>
-	<style style="display: block; white-space: pre; font: 13px/1.8 Monaco,Mono-Space; background: none repeat scroll 0% 0% rgb(51, 51, 51); color: lightgrey;" contenteditable="">
-	body{
-		color: black;
-	}
-	</style>
 </body>
 </html>
