--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 		background:      -o-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Opera 11.10+ */
 		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */
 	}
+	.contain{
+		background: #fff;
+		max-width: 800px;
+	}
 	</style>
 </head>
 <body>
-	<h1>Hello, World</h1>
+	<div class="contain">
+		<h1>Hello, World</h1>
+	</div>
 </body>
 </html>
