--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<style type="text/css">
+	@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 	body{
 		background: -webkit-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Chrome 10+, Saf5.1+ */
 		background:    -moz-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* FF3.6+ */
@@ -9,8 +10,10 @@
 		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */
 	}
 	.contain{
+		font-family: 'Lato', sans-serif;
+		color: #0A0A0A;
 		background: #fff;
-		max-width: 800px;
+		height: 100%;
 	}
 	</style>
 </head>
