--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 		background: #fff;
 		height: 100%;
 	}
+	.head{
+		text-align: center;
+		font-size: 3em;
+		font-weight: 100;
+	}
 	</style>
 </head>
 <body>
 	<div class="contain">
-		<h1>Hello, World</h1>
+		<div class="head">
+			<h1>SomeName</h1>	
+		</div>
 	</div>
 </body>
 </html>
