--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 	<style type="text/css">
 	@import url(http://fonts.googleapis.com/css?family=Lato:100);
 	body{
+
+	}
+	.colour{
+		height: 10px;
+		width: 100%;
+		position: fixed;
+		top: 0;
 		background: -webkit-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Chrome 10+, Saf5.1+ */
 		background:    -moz-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* FF3.6+ */
 		background:     -ms-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* IE10 */
 		background:      -o-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Opera 11.10+ */
-		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */
+		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */	
 	}
 	.contain{
 		font-family: 'Lato', sans-serif;
@@ -23,6 +30,7 @@
 	</style>
 </head>
 <body>
+	<div class="colour"></div>
 	<div class="contain">
 		<div class="head">
 			<h1>SomeName</h1>	
