--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		width: 100%;
 		position: fixed;
 		top: 0;
+		left: 0;
 		background: -webkit-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Chrome 10+, Saf5.1+ */
 		background:    -moz-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* FF3.6+ */
 		background:     -ms-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* IE10 */
