--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 		<div class="head">
 			<h1>SomeName</h1>	
 		</div>
+		<div class="things">
+			<p>SomeThing, soon<sup>tm</sup></p>
+		</div>
 	</div>
 </body>
 </html>
