--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		font-size: 3em;
 		font-weight: 100;
 	}
+	.things{
+		font-align: center;
+	}
 	</style>
 </head>
 <body>
@@ -37,7 +40,7 @@
 			<h1>SomeName</h1>	
 		</div>
 		<div class="things">
-			<p>SomeThing, soon<sup>tm</sup></p>
+			<h3>SomeThing, soon<sup>tm</sup></h3>
 		</div>
 	</div>
 </body>
