--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<script>
 		function stripe(){
 			for(var i = 0; i < window.innerWidth+1; i++){
-				var e = docuement.getElementById("colour");
+				var e = document.getElementById("colour");
 				var y = i;
 				var x = i < 15 ? 0 : i - 15;
 				e.style.webkitMask = "-webkit-gradient(radial, 17 17, "+ x +", 17 17, "+ y +", from(rgb(0, 0, 0)), color-stop(0.5, rgba(0, 0, 0, 0.2)), to(rgb(0, 0, 0)))"
