--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
 	</div>
 	<script>
 		function stripe(){
-			for(var i = 0; i < window.innerWidth+1; i++){
-				window.setTimeout(function(){
-					var e = document.getElementById("colour");
-					var y = i;
-					var x = i < 15 ? 0 : i - 15;
-					e.style.webkitMask = "-webkit-gradient(radial, 17 17, "+ x +", 17 17, "+ y +", from(rgb(0, 0, 0)), color-stop(0.5, rgba(0, 0, 0, 0.2)), to(rgb(0, 0, 0)))";
-				}, 10);
+			var i = 0;
+			window.setInterval(function(){
+				beam();
+			}, 1000/60);
+			
+			function beam(){
+				var e = document.getElementById("colour");
+				var y = i;
+				var x = i < 15 ? 0 : i - 15;
+				e.style.webkitMask = "-webkit-gradient(radial, 17 17, "+ x +", 17 17, "+ y +", from(rgb(0, 0, 0)), color-stop(0.5, rgba(0, 0, 0, 0.2)), to(rgb(0, 0, 0)))";
+				i++;
 			}
 		}
 		window.setInterval(stripe(), 1500);
