--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 				var y = i;
 				var x = i < 15 ? 0 : i - 15;
 				e.style.webkitMask = "-webkit-gradient(radial, 0 0, "+ x +", 0 0, "+ y +", from(rgb(0, 0, 0)), color-stop(0.5, rgba(0, 0, 0, 0.2)), to(rgb(0, 0, 0)))";
-			}
-			if(i === window.innerWidth){
-				window.clearInterval(f);
+				i === window.innerWidth ? window.clearInterval(f) : i++;
 			}
 		}
 		window.setInterval(stripe(), 1500);
