--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 				i === window.innerWidth ? window.clearInterval(f) : i++;
 			}
 		}
+		
 		window.setInterval(function(){
-			new stripe()
-			
+			new stripe();
 		}, 1500);
 	</script>
 </body>
