--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link rel="shortcut icon" type="image/png" href="favicon.png" />
 	<style type="text/css">
 	@import url(http://fonts.googleapis.com/css?family=Lato:100);
 	body{
