--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<style type="text/css">
 	@import url(http://fonts.googleapis.com/css?family=Lato:100);
 	body{
