--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
 	<style type="text/css">
 	@import url(http://fonts.googleapis.com/css?family=Lato:100);
+
 	body{
 
 	}
+
 	.colour{
 		height: 10px;
 		width: 100%;
@@ -19,17 +21,22 @@
 		background:      -o-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* Opera 11.10+ */
 		background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /* W3C */	
 	}
+
 	.contain{
 		font-family: 'Lato', sans-serif;
 		color: #0A0A0A;
 		background: #fff;
 		height: 100%;
 	}
+
 	.head{
 		text-align: center;
-		font-size: 3em;
-		font-weight: 100;
 	}
+
+	.head h1{
+		font-size: 3em;
+	}
+
 	.things{
 		text-align: center;
 		font-size: 1.5em;
