--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="theme-color" content="#24868E">
 	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
 	<style type="text/css">
 	@import url(http://fonts.googleapis.com/css?family=Lato:100);
